# Pico-Motion-Recognition

./: README.md
10_pico_accelerometer_capture_data/: CMakeLists.txt  accel_mma7361l.c
15_pico_accel_multicore_capture_data/: CMakeLists.txt  main.cpp
20_pico_motion_recognition_static_test/source/: main.cpp
30_pico_motion_recognition_inference/: CMakeLists.txt
30_pico_motion_recognition_inference/source/: ei_classifier_porting.cpp  main.cpp
